Fix toast alignment

--- a/src/App.css
+++ b/src/App.css
@@ -783,6 +783,10 @@ body {
   padding-right: 0px;
 }
 
+.Toastify {
+  display: inline-block !important;
+}
+
 .codemirrorWrapper {
   position: relative;
 }
